syntax = "proto3";

package user;

import "api/order_info/order_info.proto";

option go_package = "/api";

message RefundOrderRequest {
    int32 user_id = 1;
    repeated int32 order_id = 2;
}

message RefundOrderResponse {
    string message = 1;
}

message ReturnOrderRequest {
    int32 user_id = 1;
    repeated int32 order_id = 2;
}

message ReturnOrderResponse {
    string message = 1;
}

message ListRequest {
    int32 user_id = 1;
    int32 last_n = 2;
    bool located = 3;

    map<string, string> pattern = 4;
}

message ListResponse {
    repeated order_info.OrderInfo orders = 1;
}

service User {
    rpc Refund(RefundOrderRequest) returns (RefundOrderResponse) {}
    rpc Return(ReturnOrderRequest) returns (ReturnOrderResponse) {}
    rpc List(ListRequest) returns (ListResponse) {}
}